update mobile view for all page components, polish code

--- a/css/index.css
+++ b/css/index.css
@@ -134,16 +134,16 @@ html {
 }
 html,
 body {
-  font-family: 'Ubuntu', sans-serif;
-  color: #5E6164;
+  font-family: "Ubuntu", sans-serif;
+  color: #5e6164;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: 'Russo One', sans-serif;
-  color: #23293B;
+  font-family: "Russo One", sans-serif;
+  color: #23293b;
 }
 h2 {
   font-size: 3.2rem;
@@ -177,6 +177,11 @@ p {
   align-items: center;
   max-width: 400px;
 }
+@media (max-width: 500px) {
+  .navigation nav {
+    width: 80%;
+  }
+}
 .navigation nav a {
   padding: 10px 10px;
   font-size: 1.5rem;
@@ -207,6 +212,15 @@ footer {
   flex-wrap: wrap;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images .blast {
+    width: 100%;
+  }
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
@@ -229,8 +243,21 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 15px;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    margin-top: 10px;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -238,9 +265,35 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  background-color: #22283a;
+  color: white;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 3px;
+  width: 30%;
+  font-size: 1.5rem;
+}
+.home .walk .walk-text .btn:hover {
+  background-color: white;
+  color: #22283a;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 20px 0;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    order: -2;
+    margin: 0 auto;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
